<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="playerfragmentViewModel"
            type="com.myth.musicplayerapp.viewmodels.PlayerFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.PlayerFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="310dp"
            android:layout_height="309dp"
            android:contentDescription="@string/music_app_icon"
            android:src="@drawable/music_logo"
            app:layout_constraintBottom_toTopOf="@+id/song_title"
            app:layout_constraintEnd_toEndOf="@+id/song_title"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/song_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.826"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="252dp"
            android:text="@string/song_title"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/seek_bar"
            app:layout_constraintStart_toStartOf="@+id/seek_bar" />

        <Button
            android:id="@+id/rewind_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="104dp"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/back_icon"
            android:gravity="center|center_horizontal"
            android:contentDescription="@string/rewind"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/forward_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="104dp"
            android:drawableStart="@drawable/forward_icon"
            android:gravity="center|center_horizontal"
            android:contentDescription="@string/forward"
            app:layout_constraintBaseline_toBaselineOf="@+id/play_button"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/pause_button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:drawableStart="@drawable/pause_icon"
            android:gravity="center|center_horizontal"
            android:contentDescription="@string/pause"
            app:layout_constraintBaseline_toBaselineOf="@+id/play_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/play"
            android:drawableStart="@drawable/play_icon"
            android:drawablePadding="24dp"
            android:gravity="center|center_horizontal"
            app:layout_constraintBaseline_toBaselineOf="@+id/rewind_button"
            app:layout_constraintEnd_toEndOf="@+id/pause_button"
            app:layout_constraintStart_toStartOf="@+id/pause_button" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/time_left_text"
            app:layout_constraintEnd_toEndOf="@+id/play_button"
            app:layout_constraintStart_toStartOf="@+id/play_button"
            app:layout_constraintTop_toTopOf="@+id/time_left_text"
            app:layout_constraintVertical_bias="0.838" />

        <TextView
            android:id="@+id/time_left_text"
            android:layout_width="59dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="108dp"
            android:text="@string/_00_00"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/song_length"
            android:layout_width="59dp"
            android:layout_height="23dp"
            android:layout_marginEnd="16dp"
            android:text="@string/_00_00"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="@+id/seek_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seek_bar"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
